--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -2,7 +2,7 @@
 .contact{
     margin-bottom: 1rem;
     background-color: #002a5c;
-    background-image: url("./src/assets/fondo-mundo.png");
+    background-image: url("../../assets/fondo-mundo.png");
 }
 
 .contact__form{
